--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="JavaScript Canvas Tiranta Animation with venilla javascript">
+  <meta name="keywords" content="HTML,CSS,Canvas,JavaScript, Partiles">
+  <meta name="author" content="Mask-Man">
         <title>Tiranga - Javascript Canvas Animation - @ADMlNxd</title>
         <style>
      *{
